--- a/projects/express-typeorm/tsconfig.json
+++ b/projects/express-typeorm/tsconfig.json
@@ -1,15 +1,27 @@
 {
    "compilerOptions": {
-      "lib": [
-         "es5",
-         "es6"
-      ],
-      "target": "es5",
       "module": "commonjs",
-      "moduleResolution": "node",
-      "outDir": "./build",
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "sourceMap": true
-   }
+      "target": "es6",
+      "noImplicitAny": true,
+      "moduleResolution": "node",
+      "sourceMap": true,
+      "outDir": "dist",
+      "baseUrl": ".",
+      "paths": {
+         "*": [
+            "node_modules/*",
+            "src/types/*"
+         ]
+      },
+      "lib": [
+         "es6"
+      ]
+   },
+   "include": [
+      "src/**/*"
+   ]
 }
