--- a/projects/express-typeorm/package.json
+++ b/projects/express-typeorm/package.json
@@ -1,7 +1,7 @@
 {
    "name": "serendipity-api",
    "version": "1.0.0-beta.1",
-   "description": "Serendipity API developed with TypeORM",
+   "description": "The REST API for Serendipity CRM built using TypeScript, Node.js, Express and TypeORM.",
    "repository": {
       "type": "git",
       "url": "https://github.com/Robinyo/serendipity-api"
@@ -17,12 +17,14 @@
       "express": "^4.17.1",
       "reflect-metadata": "^0.1.10",
       "sqlite3": "^4.0.3",
-      "typeorm": "0.2.18"
+      "typeorm": "0.2.18",
+      "winston": "^3.2.1"
    },
    "devDependencies": {
       "@types/body-parser": "^1.17.0",
       "@types/express": "^4.17.0",
       "@types/node": "^8.0.29",
+      "@types/winston": "^2.4.4",
       "ts-node": "^8.3.0",
       "tslint": "^5.18.0",
       "typescript": "^3.5.2"
