Updated the README.md

--- a/projects/express-typeorm/ormconfig.json
+++ b/projects/express-typeorm/ormconfig.json
@@ -1,6 +1,6 @@
 {
   "type": "sqlite",
-  "database": "database.sqlite",
+  "database": "serendipity.db",
   "synchronize": true,
   "logging": false,
   "entities": [
