--- a/projects/express-typeorm/package.json
+++ b/projects/express-typeorm/package.json
@@ -14,7 +14,9 @@
    },
    "dependencies": {
       "body-parser": "^1.19.0",
+      "cors": "^2.8.5",
       "express": "^4.17.1",
+      "helmet": "^3.18.0",
       "reflect-metadata": "^0.1.10",
       "sqlite3": "^4.0.3",
       "typeorm": "0.2.18",
@@ -22,7 +24,9 @@
    },
    "devDependencies": {
       "@types/body-parser": "^1.17.0",
+      "@types/cors": "^2.8.5",
       "@types/express": "^4.17.0",
+      "@types/helmet": "0.0.43",
       "@types/node": "^8.0.29",
       "@types/winston": "^2.4.4",
       "ts-node": "^8.3.0",
