Updated the README.md

--- a/projects/express-typeorm/ormconfig.json
+++ b/projects/express-typeorm/ormconfig.json
@@ -2,7 +2,7 @@
   "type": "sqlite",
   "database": "serendipity.db",
   "synchronize": true,
-  "logging": false,
+  "logging": true,
   "entities": [
     "src/entitys/**/*.ts"
   ],
