--- a/projects/express-typeorm/package.json
+++ b/projects/express-typeorm/package.json
@@ -13,6 +13,7 @@
       "start": "ts-node src/server.ts"
    },
    "dependencies": {
+      "axios": "^0.19.0",
       "body-parser": "^1.19.0",
       "class-validator": "^0.9.1",
       "cors": "^2.8.5",
