--- a/projects/express-typeorm/package.json
+++ b/projects/express-typeorm/package.json
@@ -21,10 +21,12 @@
    "dependencies": {
       "axios": "^0.19.0",
       "body-parser": "^1.19.0",
+      "chalk": "^2.4.2",
       "class-validator": "^0.9.1",
       "cors": "^2.8.5",
       "express": "^4.17.1",
       "helmet": "^3.18.0",
+      "jsonwebtoken": "^8.5.1",
       "reflect-metadata": "^0.1.10",
       "sqlite3": "^4.0.3",
       "typeorm": "0.2.18",
@@ -32,9 +34,11 @@
    },
    "devDependencies": {
       "@types/body-parser": "^1.17.0",
+      "@types/chalk": "^2.2.0",
       "@types/cors": "^2.8.5",
       "@types/express": "^4.17.0",
       "@types/helmet": "0.0.43",
+      "@types/jsonwebtoken": "^8.3.2",
       "@types/node": "^8.0.29",
       "@types/winston": "^2.4.4",
       "ts-node": "^8.3.0",
