--- a/projects/express-typeorm/package.json
+++ b/projects/express-typeorm/package.json
@@ -29,6 +29,7 @@
       "jsonwebtoken": "^8.5.1",
       "reflect-metadata": "^0.1.10",
       "sqlite3": "^4.0.3",
+      "stack-trace": "0.0.10",
       "typeorm": "0.2.18",
       "winston": "^3.2.1"
    },
@@ -40,6 +41,7 @@
       "@types/helmet": "0.0.43",
       "@types/jsonwebtoken": "^8.3.2",
       "@types/node": "^8.0.29",
+      "@types/stack-trace": "0.0.29",
       "@types/winston": "^2.4.4",
       "ts-node": "^8.3.0",
       "tslint": "^5.18.0",
