--- a/projects/express-typeorm/package.json
+++ b/projects/express-typeorm/package.json
@@ -23,6 +23,7 @@
       "body-parser": "^1.19.0",
       "chalk": "^2.4.2",
       "class-validator": "^0.9.1",
+      "convict": "^5.0.0",
       "cors": "^2.8.5",
       "express": "^4.17.1",
       "helmet": "^3.18.0",
@@ -36,6 +37,7 @@
    "devDependencies": {
       "@types/body-parser": "^1.17.0",
       "@types/chalk": "^2.2.0",
+      "@types/convict": "^4.2.1",
       "@types/cors": "^2.8.5",
       "@types/express": "^4.17.0",
       "@types/helmet": "0.0.43",
