--- a/projects/express-typeorm/package.json
+++ b/projects/express-typeorm/package.json
@@ -25,6 +25,7 @@
       "class-validator": "^0.9.1",
       "convict": "^5.0.0",
       "cors": "^2.8.5",
+      "errorhandler": "^1.5.1",
       "express": "^4.17.1",
       "helmet": "^3.18.0",
       "jsonwebtoken": "^8.5.1",
@@ -39,6 +40,7 @@
       "@types/chalk": "^2.2.0",
       "@types/convict": "^4.2.1",
       "@types/cors": "^2.8.5",
+      "@types/errorhandler": "0.0.32",
       "@types/express": "^4.17.0",
       "@types/helmet": "0.0.43",
       "@types/jsonwebtoken": "^8.3.2",
