--- a/projects/express-typeorm/.dockerignore
+++ b/projects/express-typeorm/.dockerignore
@@ -5,7 +5,7 @@ Dockerfile
 .gitignore
 
 #
-# Contents of .gitignore
+# Start - Contents of .gitignore
 #
 
 *.out
@@ -51,7 +51,7 @@ serendipity.db
 TODO.txt
 
 #
-#
+# End - Contents of .gitignore
 #
 
 resources
