--- a/projects/express-typeorm/package.json
+++ b/projects/express-typeorm/package.json
@@ -19,17 +19,20 @@
       "typeorm"
    ],
    "dependencies": {
+      "@okta/jwt-verifier": "^1.0.0",
       "axios": "^0.19.0",
       "body-parser": "^1.19.0",
       "chalk": "^2.4.2",
       "class-validator": "^0.9.1",
+      "compression": "^1.7.4",
       "convict": "^5.0.0",
       "cors": "^2.8.5",
       "errorhandler": "^1.5.1",
       "express": "^4.17.1",
       "helmet": "^3.18.0",
-      "jsonwebtoken": "^8.5.1",
+      "multer": "^1.4.1",
       "reflect-metadata": "^0.1.10",
+      "routing-controllers": "^0.7.7",
       "sqlite3": "^4.0.3",
       "stack-trace": "0.0.10",
       "typeorm": "0.2.18",
@@ -38,12 +41,13 @@
    "devDependencies": {
       "@types/body-parser": "^1.17.0",
       "@types/chalk": "^2.2.0",
+      "@types/compression": "0.0.36",
       "@types/convict": "^4.2.1",
       "@types/cors": "^2.8.5",
       "@types/errorhandler": "0.0.32",
       "@types/express": "^4.17.0",
       "@types/helmet": "0.0.43",
-      "@types/jsonwebtoken": "^8.3.2",
+      "@types/multer": "^1.3.7",
       "@types/node": "^8.0.29",
       "@types/stack-trace": "0.0.29",
       "@types/winston": "^2.4.4",
