--- a/projects/express-typeorm/src/docs/v2/serendipity-api.yaml
+++ b/projects/express-typeorm/src/docs/v2/serendipity-api.yaml
@@ -12,12 +12,11 @@ info:
     # Introduction
     Serendipity's REST API is built on HTTP. The API is RESTful. It has predictable resource URIs.
 
-      The API is documented in <a target="_blank" href="https://github.com/OAI/OpenAPI-Specification">OpenAPI</a> format.
-      In addition to the standard OpenAPI syntax we use a few
-      <a target="_blank" href="https://github.com/Rebilly/ReDoc/blob/master/docs/redoc-vendor-extensions.md">vendor extensions</a>.
+    The API is documented in <a target="_blank" href="https://github.com/OAI/OpenAPI-Specification">OpenAPI</a> format. In addition to the standard OpenAPI syntax we use a few <a target="_blank" href="https://github.com/Rebilly/ReDoc/blob/master/docs/redoc-vendor-extensions.md">vendor extensions</a>.
 
     # Overview
     The following sections describe the resources that comprise Serendipity's REST API.
+
     ## Current Version
     By default, all requests to http://localhost:3001/api receive the `v1` version of the REST API. We encourage you to explicitly request this version via the `Accept` header.
 
@@ -38,6 +37,7 @@ info:
 
     ## Timezones
     Some requests allow for specifying timestamps or generate timestamps with time zone information. We apply the following rules, in order of priority, to determine timezone information for API calls.
+
     ### Explicitly provide an ISO 8601 timestamp with timezone information
     For API calls that allow for a timestamp to be specified, we use that exact timestamp.
 
@@ -52,6 +52,7 @@ info:
               <https://localhost:3001/api/individuals?page=34>; rel="last"
 
     `rel="next"` states that the next page is `page=2`. This makes sense, since by default, all paginated queries start at page `1`. `rel="last"` provides some more information, stating that the last page of results is on `page 34`. Accordingly, we have 33 more pages of information that we can consume.
+
     ## Parameters
     Many API methods take optional parameters:
 
@@ -59,6 +60,7 @@ info:
 
     In this example, the '1234' value is provided for the `:partyId` parameter in the path while `:addressType` is passed in the query string.
     For POST, PATCH, PUT, and DELETE requests, parameters not included in the URL should be encoded as JSON with a Content-Type of 'application/json'.
+
     ## Metadata
     The API provides **metadata services** that you can use to discover information about the classifcation schemes and values used by the application.
 
@@ -87,16 +89,6 @@ info:
 
         curl https://localhost:3001/api
 
-    ## Authentication
-    The API supports API Key authentication.
-
-      When you sign up for an account, you are given your first API key. You can generate additional API keys, and delete
-      API keys (as you may need to rotate your keys in the future). You authenticate to the API by
-      providing your secret key in the request header.
-
-      **Note:** Some requests will return `404 Not Found`, instead of `403 Permission Denied`. This is to prevent the
-      accidental leakage of information to unauthorised users.
-host: localhost:3001/api
 basePath: /
 schemes:
   - https
@@ -369,6 +361,19 @@ responses:
     description: The specified resource was not found
     schema:
       $ref: '#/definitions/not-found'
+
+securityDefinitions:
+  oauth:
+    type: oauth2
+    authorizationUrl: 'http://localhost:3001/api/oauth2/authorize'
+    tokenUrl: 'http://localhost:3001/api/oauth2/token'
+    flow: accessCode
+    scopes:
+      individual:read: Read Individual
+      individual:write: Write Individual
+      organisation:read: Read Organisation
+      organisation:write: Write Organisation
+
 paths:
   /business-names:
     get:
@@ -939,6 +944,9 @@ paths:
           $ref: '#/responses/Unauthenticated'
         '404':
           $ref: '#/responses/NotFound'
+      security: [
+        oauth: [ 'individual:read' ]
+      ]
     put:
       tags:
         - Individuals
@@ -973,7 +981,6 @@ paths:
         '204':
           description: Individual was deleted
         '400':
-          description: Individual has related resources and cannot be deleted
           $ref: '#/responses/FailedPrecondition'
         '401':
           $ref: '#/responses/Unauthenticated'
@@ -1694,7 +1701,6 @@ paths:
         '204':
           description: Organisation was deleted
         '400':
-          description: Organisation has related resources and cannot be deleted
           $ref: '#/responses/FailedPrecondition'
         '401':
           $ref: '#/responses/Unauthenticated'
