--- a/projects/express-typeorm/src/docs/v2/serendipity-api.yaml
+++ b/projects/express-typeorm/src/docs/v2/serendipity-api.yaml
@@ -1,26 +1,29 @@
 swagger: '2.0'
+schemes:
+  - https
+host: petstore.swagger.io
+basePath: /
 info:
-  version: 1.0.0
   title: Serendipity CRM REST API
+  version: 1.0.0
   license:
-    name: 'The MIT License'
-    url: 'https://opensource.org/licenses/MIT'
-  termsOfService: 'https://serendipity.org.au/terms-of-service/'
-  x-logo:
-    url: 'http://localhost:3001/public/images/icons/serendipity-logo.svg'
+    name: 'Creative Commons Attribution 3.0 Australia (CC BY 3.0 AU)'
+    url: 'https://creativecommons.org/licenses/by/3.0/au/'
   description: |
+    This is the RESTful API for Serendipity CRM built using TypeScript, Node.js, Express and TypeORM.
+
+    The API is composed of four distinct resource archetypes: document, collection, store, and controller.
+
+    See: [RESTful API Design Guidelines](https://github.com/Robinyo/restful-api-design-guidelines)
+
     # Introduction
     Serendipity's REST API is built on HTTP. The API is RESTful. It has predictable resource URIs.
-
     The API is documented in <a target="_blank" href="https://github.com/OAI/OpenAPI-Specification">OpenAPI</a> format. In addition to the standard OpenAPI syntax we use a few <a target="_blank" href="https://github.com/Rebilly/ReDoc/blob/master/docs/redoc-vendor-extensions.md">vendor extensions</a>.
-
     # Overview
     The following sections describe the resources that comprise Serendipity's REST API.
-
-    ## Current Version
+    # Current Version
     By default, all requests to http://localhost:3001/api receive the `v1` version of the REST API. We encourage you to explicitly request this version via the `Accept` header.
-
-    ## Schema
+    # Schema
     All API access is over HTTP (HTTPS) and accessed from https://localhost:3001/api. All data is sent and received as JSON. Blank fields are included.
 
       All dates use the [ISO 8601](https://en.wikipedia.org/wiki/ISO_8601) format:
@@ -34,16 +37,14 @@ info:
         YYYY-MM-DDTHH:MM:SSZ
 
       For example: `2017-07-01T11:05:06+10:00`
-
-    ## Timezones
+    # Timezones
     Some requests allow for specifying timestamps or generate timestamps with time zone information. We apply the following rules, in order of priority, to determine timezone information for API calls.
 
-    ### Explicitly provide an ISO 8601 timestamp with timezone information
+    Explicitly provide an ISO 8601 timestamp with timezone information
     For API calls that allow for a timestamp to be specified, we use that exact timestamp.
 
       For example: `2017-07-01T11:05:06+10:00`
-
-    ## Pagination
+    # Pagination
     Information about pagination is provided in the [Link](https://tools.ietf.org/html/rfc5988#page-6) header.
 
       For example:
@@ -52,16 +53,14 @@ info:
               <https://localhost:3001/api/individuals?page=34>; rel="last"
 
     `rel="next"` states that the next page is `page=2`. This makes sense, since by default, all paginated queries start at page `1`. `rel="last"` provides some more information, stating that the last page of results is on `page 34`. Accordingly, we have 33 more pages of information that we can consume.
-
-    ## Parameters
+    # Parameters
     Many API methods take optional parameters:
 
         GET /individuals/1234/addresses/?addressType='Mailing'
 
     In this example, the '1234' value is provided for the `:partyId` parameter in the path while `:addressType` is passed in the query string.
     For POST, PATCH, PUT, and DELETE requests, parameters not included in the URL should be encoded as JSON with a Content-Type of 'application/json'.
-
-    ## Metadata
+    # Metadata
     The API provides **metadata services** that you can use to discover information about the classifcation schemes and values used by the application.
 
       For example:
@@ -83,24 +82,24 @@ info:
             ...
           }
         ]
-
-    ## Root Endpoint
+    # Root Endpoint
     You can issue a GET request to the root endpoint (also known as the service root) to get all the endpoint categories that the REST API supports:
 
         curl https://localhost:3001/api
+    # Authentication
+    The API supports:
+      - OAuth 2.0
 
-basePath: /
-schemes:
-  - https
-x-servers:
-  - url: //localhost:3001/api
-    description: Production API Server
-  - url: //localhost:3001/sandbox/api
-    description: Sandbox API Server
-produces:
-  - application/json
-consumes:
-  - application/json
+    To access an endpoint a user must have requested and been granted the appropriate scope.
+
+    For example, to access:
+
+        GET /individuals
+
+    The user must have been granted the `individual:read` scope.
+    <!-- ReDoc-Inject: <security-definitions> -->
+  x-logo:
+    url: 'http://localhost:3001/public/images/icons/serendipity-logo.svg'
 tags:
   - name: Individuals
     description: |
@@ -285,6 +284,28 @@ x-tagGroups:
       - License Types
       - Registered Identifier Types
       - Roles
+securityDefinitions:
+  oauth:
+    type: oauth2
+    authorizationUrl: 'http://localhost:3001/oauth2/authorize'
+    tokenUrl: 'http://localhost:3001/oauth2/token'
+    flow: accessCode
+    scopes:
+      classification:read: Read access to the Classification schemes collection
+      classification:write: Write access to the Classification schemes collection
+      individual:read: Read access to the Individuals collection
+      individual:write: Write access to the Individuals collection
+      organisation:read: Read access to the Organisations collection
+      organisation:write: Write access to the Organisations collection
+x-servers:
+  - url: //localhost:3001/api
+    description: Production API Server
+  - url: //localhost:3001/sandbox/api
+    description: Sandbox API Server
+produces:
+  - application/json
+consumes:
+  - application/json
 parameters:
   apiKey:
     name: apiKey
@@ -361,19 +382,6 @@ responses:
     description: The specified resource was not found
     schema:
       $ref: '#/definitions/not-found'
-
-securityDefinitions:
-  oauth:
-    type: oauth2
-    authorizationUrl: 'http://localhost:3001/api/oauth2/authorize'
-    tokenUrl: 'http://localhost:3001/api/oauth2/token'
-    flow: accessCode
-    scopes:
-      individual:read: Read Individual
-      individual:write: Write Individual
-      organisation:read: Read Organisation
-      organisation:write: Write Organisation
-
 paths:
   /business-names:
     get:
@@ -971,6 +979,9 @@ paths:
           $ref: '#/responses/Unauthenticated'
         '404':
           $ref: '#/responses/NotFound'
+      security: [
+        oauth: [ 'individual:write' ]
+      ]
     delete:
       tags:
         - Individuals
@@ -986,6 +997,9 @@ paths:
           $ref: '#/responses/Unauthenticated'
         '404':
           $ref: '#/responses/NotFound'
+      security: [
+        oauth: [ 'individual:write' ]
+      ]
   '/individuals/{partyId}/addresses':
     parameters:
       - $ref: '#/parameters/apiKey'
@@ -1016,6 +1030,9 @@ paths:
           $ref: '#/responses/Unauthenticated'
         '404':
           $ref: '#/responses/NotFound'
+      security: [
+        oauth: [ 'individual:read' ]
+      ]
     post:
       tags:
         - Individuals Addresses
@@ -1043,6 +1060,9 @@ paths:
           $ref: '#/responses/InvalidArgument'
         '401':
           $ref: '#/responses/Unauthenticated'
+      security: [
+        oauth: [ 'individual:write' ]
+      ]
   '/individuals/{partyId}/addresses/{addressId}':
     parameters:
       - $ref: '#/parameters/apiKey'
@@ -1063,6 +1083,9 @@ paths:
           $ref: '#/responses/Unauthenticated'
         '404':
           $ref: '#/responses/NotFound'
+      security: [
+        oauth: [ 'individual:read' ]
+      ]
     put:
       tags:
         - Individuals Addresses
@@ -1087,6 +1110,9 @@ paths:
           $ref: '#/responses/Unauthenticated'
         '404':
           $ref: '#/responses/NotFound'
+      security: [
+        oauth: [ 'individual:write' ]
+      ]
     delete:
       tags:
         - Individuals Addresses
