--- a/projects/express-typeorm/package.json
+++ b/projects/express-typeorm/package.json
@@ -1,62 +1,63 @@
 {
-   "name": "serendipity-api",
-   "version": "1.0.0-beta.1",
-   "description": "The REST API for Serendipity CRM built using TypeScript, Node.js, Express and TypeORM.",
-   "repository": {
-      "type": "git",
-      "url": "https://github.com/Robinyo/serendipity-api"
-   },
-   "author": "Rob Ferguson",
-   "homepage": "https://github.com/Robinyo/serendipity",
-   "license": "MIT",
-   "scripts": {
-      "start": "ts-node src/server.ts",
-      "compodoc": "./node_modules/.bin/compodoc -p src/tsconfig.app.json --theme vagrant",
-      "yamlinc": "./node_modules/.bin/yamlinc ./src/docs/v3/index.yaml && npm run yamlinc-mv",
-      "yamlinc-mv": "mv ./index.inc.yaml ./src/docs/v3/serendipity-api.yaml"
-   },
-   "keywords": [
-      "typescript",
-      "nodejs",
-      "express",
-      "typeorm"
-   ],
-   "dependencies": {
-      "@okta/jwt-verifier": "^1.0.0",
-      "axios": "^0.19.0",
-      "body-parser": "^1.19.0",
-      "chalk": "^2.4.2",
-      "class-validator": "^0.9.1",
-      "compression": "^1.7.4",
-      "convict": "^5.0.0",
-      "cors": "^2.8.5",
-      "errorhandler": "^1.5.1",
-      "express": "^4.17.1",
-      "helmet": "^3.18.0",
-      "multer": "^1.4.1",
-      "reflect-metadata": "^0.1.10",
-      "routing-controllers": "^0.7.7",
-      "sqlite3": "^4.0.3",
-      "stack-trace": "0.0.10",
-      "typeorm": "0.2.18",
-      "winston": "^3.2.1"
-   },
-   "devDependencies": {
-      "@types/body-parser": "^1.17.0",
-      "@types/chalk": "^2.2.0",
-      "@types/compression": "0.0.36",
-      "@types/convict": "^4.2.1",
-      "@types/cors": "^2.8.5",
-      "@types/errorhandler": "0.0.32",
-      "@types/express": "^4.17.0",
-      "@types/helmet": "0.0.43",
-      "@types/multer": "^1.3.7",
-      "@types/node": "^8.0.29",
-      "@types/stack-trace": "0.0.29",
-      "@types/winston": "^2.4.4",
-      "ts-node": "^8.3.0",
-      "tslint": "^5.18.0",
-      "typescript": "^3.5.2",
-      "yamlinc": "^0.1.9"
-   }
+  "name": "serendipity-api",
+  "version": "1.0.0-beta.1",
+  "description": "The REST API for Serendipity CRM built using TypeScript, Node.js, Express and TypeORM.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Robinyo/serendipity-api"
+  },
+  "author": "Rob Ferguson",
+  "homepage": "https://github.com/Robinyo/serendipity",
+  "license": "MIT",
+  "scripts": {
+    "start": "ts-node src/server.ts",
+    "compodoc": "./node_modules/.bin/compodoc -p src/tsconfig.app.json --theme vagrant",
+    "yamlinc": "./node_modules/.bin/yamlinc ./src/docs/v3/index.yaml && npm run yamlinc-mv",
+    "yamlinc-mv": "mv ./index.inc.yaml ./src/docs/v3/serendipity-api.yaml"
+  },
+  "keywords": [
+    "typescript",
+    "nodejs",
+    "express",
+    "typeorm"
+  ],
+  "dependencies": {
+    "@okta/jwt-verifier": "^1.0.0",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "chalk": "^2.4.2",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.9.1",
+    "compression": "^1.7.4",
+    "convict": "^5.0.0",
+    "cors": "^2.8.5",
+    "errorhandler": "^1.5.1",
+    "express": "^4.17.1",
+    "helmet": "^3.18.0",
+    "multer": "^1.4.1",
+    "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.7.7",
+    "sqlite3": "^4.0.3",
+    "stack-trace": "0.0.10",
+    "typeorm": "0.2.18",
+    "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/chalk": "^2.2.0",
+    "@types/compression": "0.0.36",
+    "@types/convict": "^4.2.1",
+    "@types/cors": "^2.8.5",
+    "@types/errorhandler": "0.0.32",
+    "@types/express": "^4.17.0",
+    "@types/helmet": "0.0.43",
+    "@types/multer": "^1.3.7",
+    "@types/node": "^8.0.29",
+    "@types/stack-trace": "0.0.29",
+    "@types/winston": "^2.4.4",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.2",
+    "yamlinc": "^0.1.9"
+  }
 }
