--- a/projects/express-typeorm/tsconfig.json
+++ b/projects/express-typeorm/tsconfig.json
@@ -1,18 +1,28 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-
     "target": "es6",
-    "noImplicitAny": true,
-    "moduleResolution": "node",
+    "types": ["reflect-metadata"],
+    "module": "commonjs",
+    "pretty": true,
     "sourceMap": true,
     "outDir": "dist",
+    "importHelpers": true,
+    "strict": true,
+    "noImplicitAny": false,
+    "strictNullChecks": false,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": false,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "moduleResolution": "node",
     "baseUrl": ".",
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "paths": {
       "*": [
         "node_modules/*",
@@ -20,9 +30,19 @@
       ]
     },
     "lib": [
+      "es5",
       "es6",
-      "es7",
-      "es2017"
+      "dom",
+      "es2015.core",
+      "es2015.collection",
+      "es2015.generator",
+      "es2015.iterable",
+      "es2015.promise",
+      "es2015.proxy",
+      "es2015.reflect",
+      "es2015.symbol",
+      "es2015.symbol.wellknown",
+      "esnext.asynciterable"
     ]
   },
   "include": [
