--- a/projects/express-typeorm/package.json
+++ b/projects/express-typeorm/package.json
@@ -34,6 +34,7 @@
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
+    "injection-js": "^2.2.1",
     "multer": "^1.4.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^4.0.3",
