Refactored the TypeORM entities

--- a/projects/express-typeorm/ormconfig.json
+++ b/projects/express-typeorm/ormconfig.json
@@ -2,6 +2,7 @@
   "type": "sqlite",
   "database": "serendipity.db",
   "synchronize": true,
+  "migrationsRun": false,
   "logging": false,
   "entities": [
     "src/api/models/**/*.ts"
