--- a/projects/express-typeorm/package.json
+++ b/projects/express-typeorm/package.json
@@ -33,9 +33,11 @@
     "cors": "^2.8.5",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "helmet": "^3.18.0",
     "injection-js": "^2.2.1",
     "multer": "^1.4.1",
+    "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^4.0.3",
     "stack-trace": "0.0.10",
