--- a/projects/express-typeorm/package.json
+++ b/projects/express-typeorm/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@okta/jwt-verifier": "^1.0.0",
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "class-transformer": "^0.2.3",
@@ -33,10 +34,15 @@
     "cors": "^2.8.5",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
     "faker": "^4.1.0",
     "helmet": "^3.18.0",
     "injection-js": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^4.0.3",
@@ -45,6 +51,7 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.0",
     "@types/chalk": "^2.2.0",
     "@types/compression": "0.0.36",
@@ -53,6 +60,7 @@
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.17.0",
     "@types/helmet": "0.0.43",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/multer": "^1.3.7",
     "@types/node": "^8.0.29",
     "@types/stack-trace": "0.0.29",
