Updated the Sample Data seeds

--- a/projects/express-typeorm/package.json
+++ b/projects/express-typeorm/package.json
@@ -31,9 +31,10 @@
     "class-validator": "^0.9.1",
     "convict": "^5.0.0",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "faker": "^4.1.0",
-    "helmet": "^3.18.0",
+    "helmet": "^3.21.1",
     "injection-js": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "path": "^0.12.7",
@@ -50,6 +51,7 @@
     "@types/compression": "0.0.36",
     "@types/convict": "^4.2.1",
     "@types/cors": "^2.8.5",
+    "@types/csvtojson": "^1.1.5",
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.17.0",
     "@types/helmet": "0.0.43",
