--- a/projects/express-typeorm/package.json
+++ b/projects/express-typeorm/package.json
@@ -37,11 +37,12 @@
     "helmet": "^3.21.1",
     "injection-js": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "next": "^9.1.4",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^4.0.3",
     "stack-trace": "0.0.10",
-    "typeorm": "0.2.18",
+    "typeorm": "^0.2.20",
     "winston": "^3.2.1"
   },
   "devDependencies": {
