Updated the Sample Data Loader

--- a/projects/spring-boot/server/src/main/resources/persistence-sqlite.properties
+++ b/projects/spring-boot/server/src/main/resources/persistence-sqlite.properties
@@ -1,10 +1,10 @@
-jdbc.driverClassName=org.sqlite.JDBC
-jdbc.url=jdbc:sqlite:memory:serendipity.db?cache=shared
-jdbc.user=admin
-jdbc.password=secret
+# jdbc.driverClassName=org.sqlite.JDBC
+# jdbc.url=jdbc:sqlite:memory:serendipity.db?cache=shared
+# jdbc.user=admin
+# jdbc.password=secret
 
-hibernate.dialect=org.serendipity.restapi.dialect.SQLiteDialect
-hibernate.hbm2ddl.auto=create-drop
-hibernate.show_sql=true
+# hibernate.dialect=org.serendipity.restapi.dialect.SQLiteDialect
+# hibernate.hbm2ddl.auto=create-drop
+# hibernate.show_sql=true
 
 # https://github.com/eugenp/tutorials/tree/master/spring-data-rest/src/main/resources
