--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -1,15 +1,19 @@
 spring.main.banner-mode=off
 spring.jpa.open-in-view=false
 
-# spring.profiles.active=sqlite
+# Logging
+logging.level.root=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.security=DEBUG
+
+# Spring Boot Resource Server
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:10001/auth/realms/development/protocol/openid-connect/certs
 
 # Configure Hibernate Naming Strategy (camelCase)
-
-# spring.jpa.hibernate.naming.implicit-strategy=jpa
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Sqlite
-
 spring.datasource.url=jdbc:sqlite:serendipity.db
 spring.datasource.driverClassName=org.sqlite.JDBC
 spring.datasource.username=admin
@@ -20,11 +24,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
 # H2
-
 # spring.datasource.url=jdbc:h2:mem:serendipity.db
 # spring.datasource.driverClassName=org.h2.Driver
 # spring.datasource.username=admin
