--- a/projects/spring-boot/server/pom.xml
+++ b/projects/spring-boot/server/pom.xml
@@ -31,6 +31,12 @@
         </exclusion>
       </exclusions>
     </dependency>
+    
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
