--- a/projects/spring-boot/pom.xml
+++ b/projects/spring-boot/pom.xml
@@ -57,10 +57,18 @@
     </dependency>
 
     <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
+    <!--
+    <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>sqlite-jdbc</artifactId>
     </dependency>  
-
+    -->
+    
     <!-- Add REST API (HATEOAS) dependencies -->
 
     <dependency>
