--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -10,28 +10,14 @@ logging.level.org.springframework.security=DEBUG
 # Spring Boot Resource Server
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:10001/auth/realms/development/protocol/openid-connect/certs
 
-# Configure Hibernate Naming Strategy (camelCase)
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-# Sqlite
-spring.datasource.url=jdbc:sqlite:serendipity.db
-spring.datasource.driverClassName=org.sqlite.JDBC
+# H2
+spring.datasource.url=jdbc:h2:file:./serendipity
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=secret
-spring.jpa.database-platform=org.serendipity.restapi.dialect.SQLiteDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# H2
-# spring.datasource.url=jdbc:h2:mem:serendipity.db
-# spring.datasource.driverClassName=org.h2.Driver
-# spring.datasource.username=admin
-# spring.datasource.password=secret
-# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# spring.h2.console.enabled=true
-# spring.h2.console.path=/h2-console
-# spring.h2.console.settings.trace=false
-# spring.h2.console.settings.web-allow-others=false
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
