--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -16,8 +16,125 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=secret
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
+
+#
+# Relaxed Binding (Externalised Configuration)
+#
+# Property	                          Note
+# acme.my-project.person.first-name   Kebab case, which is recommended for use in .properties and .yml files.
+# acme.myProject.person.firstName     Standard camel case syntax.
+# acme.my_project.person.first_name   Underscore notation, which is an alternative format for use in .properties and .yml files.
+# ACME_MYPROJECT_PERSON_FIRSTNAME     Upper case format, which is recommended when using system environment variables.
+#
+# See: https://docs.spring.io/spring-boot/docs/2.0.7.RELEASE/reference/html/boot-features-external-config.html#boot-features-external-config-relaxed-binding
+
+# Ref: https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html
+# Ref: https://github.com/flowable/flowable-engine/blob/master/modules/flowable-app-rest/src/main/resources/flowable-default.properties
+# Ref: https://github.com/flowable/flowable-engine/blob/master/modules/flowable-ui-idm/flowable-ui-idm-app/src/main/resources/flowable-default.properties
+# Ref: https://flowable.com/open-source/docs/bpmn/ch15-REST/
+# Ref: https://flowable.com/open-source/docs/bpmn/ch05a-Spring-Boot/#flowable-application-properties
+
+# Note: UPPER_CASE_FORMAT is recommended when using system environment variables.
+
+#
+# LDAP
+#
+
+FLOWABLE_IDM_LDAP_ENABLED=true
+FLOWABLE_IDM_LDAP_SERVER=ldap://host.docker.internal
+FLOWABLE_IDM_LDAP_PORT=10389
+FLOWABLE_IDM_LDAP_USER=cn=admin,dc=flowable,dc=org
+FLOWABLE_IDM_LDAP_PASSWORD=secret
+FLOWABLE_IDM_LDAP_BASE_DN=dc=flowable,dc=org
+FLOWABLE_IDM_LDAP_USER_BASE_DN=ou=users,dc=flowable,dc=org
+FLOWABLE_IDM_LDAP_GROUP_BASE_DN=ou=groups,dc=flowable,dc=org
+FLOWABLE_IDM_LDAP_QUERY_USER_BY_ID=(&(objectClass=inetOrgPerson)(uid={0}))
+FLOWABLE_IDM_LDAP_QUERY_USER_BY_FULL_NAME_LIKE=(&(objectClass=inetOrgPerson)(|({0}=*{1}*)({2}=*{3}*)))
+FLOWABLE_IDM_LDAP_QUERY_ALL_USERS=(objectClass=inetOrgPerson)
+FLOWABLE_IDM_LDAP_QUERY_GROUPS_FOR_USER=(&(objectClass=groupOfUniqueNames)(uniqueMember={0}))
+FLOWABLE_IDM_LDAP_QUERY_ALL_GROUPS=(objectClass=groupOfUniqueNames)
+FLOWABLE_IDM_LDAP_QUERY_GROUP_BY_ID=(&(objectClass=groupOfUniqueNames)(uniqueId={0}))
+FLOWABLE_IDM_LDAP_ATTRIBUTE_USER_ID=uid
+FLOWABLE_IDM_LDAP_ATTRIBUTE_FIRST_NAME=cn
+FLOWABLE_IDM_LDAP_ATTRIBUTE_LAST_NAME=sn
+FLOWABLE_IDM_LDAP_ATTRIBUTE_EMAIL=mail
+FLOWABLE_IDM_LDAP_ATTRIBUTE_GROUP_ID=cn
+FLOWABLE_IDM_LDAP_ATTRIBUTE_GROUP_NAME=cn
+FLOWABLE_IDM_LDAP_CACHE_GROUP_SIZE=10000
+FLOWABLE_IDM_LDAP_CACHE_GROUP_EXPIRATION=180000
+
+#
+# DEFAULT ADMINISTRATOR ACCOUNTS
+#
+
+FLOWABLE_IDM_APP_ADMIN_USER_ID=flowable
+FLOWABLE_IDM_APP_ADMIN_PASSWORD=test
+FLOWABLE_IDM_APP_ADMIN_FIRST_NAME=Flowable
+FLOWABLE_IDM_APP_ADMIN_LAST_NAME=Administrator
+FLOWABLE_IDM_APP_ADMIN_EMAIL=admin@flowable.org
+
+FLOWABLE_COMMON_APP_IDM_ADMIN_USER=flowable
+FLOWABLE_COMMON_APP_IDM_ADMIN_PASSWORD=test
+
+
+#
+# DEFAULT REST API ACCOUNTS - See: https://flowable.com/open-source/docs/bpmn/ch15-REST/
+#
+
+# flowable.rest.app.admin.user-id=rest-admin
+# flowable.rest.app.admin.password=test
+# flowable.rest.app.admin.first-name=Rest
+# flowable.rest.app.admin.last-name=Admin
+
+#
+# DEFAULT REST API ACCOUNTS - See: https://github.com/flowable/flowable-engine/blob/master/modules/flowable-app-rest/src/main/resources/flowable-default.properties
+#
+
+# flowable.rest.app.admin.user-id=rest-admin
+# flowable.rest.app.admin.password=test
+# flowable.rest.app.admin.firstname=Rest
+# flowable.rest.app.admin.lastname=Admin
+
+#
+# DEFAULT REST API ACCOUNTS
+#
+
+# FLOWABLE_REST_APP_ADMIN_USERID=flowable-rest
+# FLOWABLE_REST_APP_ADMIN_PASSWORD=test
+# FLOWABLE_REST_APP_ADMIN_FIRSTNAME=Flowable Rest API
+# FLOWABLE_REST_APP_ADMIN_LASTNAME=Administrator
+
+# FLOWABLE_REST_APP_ADMIN_USER_ID=flowable-rest
+# FLOWABLE_REST_APP_ADMIN_PASSWORD=test
+# FLOWABLE_REST_APP_ADMIN_FIRST_NAME=Flowable Rest API
+# FLOWABLE_REST_APP_ADMIN_LAST_NAME=Administrator
+
+# https://unix.stackexchange.com/questions/23659/can-shell-variable-name-include-a-hyphen-or-dash
+# https://github.com/gliderlabs/docker-alpine/issues/290
+
+#
+# MISC
+#
+
+# https://github.com/flowable/flowable-engine/issues/1958#issuecomment-571569786
+# -e "spring.datasource.url=jdbc:h2:~/flowable-db/db;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=9091;DB_CLOSE_DELAY=-1"
+
+# SPRING_DATASOURCE_URL=jdbc:h2:~/flowable-db/db
+# AUTO_SERVER=TRUE
+# AUTO_SERVER_PORT=9091
+# DB_CLOSE_DELAY=-1
+
+# HTTP Status 404 \u2013 Not Found
+# Type Status Report
+#
+# Message /flowable-idm
+#
+# Description The origin server did not find a current representation for the target resource or is not willing to disclose that one exists.
+#
+# Apache Tomcat/9.0.14
