Updated the H2 console config

--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.main.banner-mode=off
-spring.jpa.open-in-view=false
+# spring.main.banner-mode=off
+# spring.jpa.open-in-view=false
+
+server.port=3001
 
 # Logging
 logging.level.root=INFO
@@ -11,8 +13,8 @@ logging.level.org.springframework.security=DEBUG
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:10001/auth/realms/development/protocol/openid-connect/certs
 
 # H2
-spring.datasource.url=jdbc:h2:file:./serendipity
 spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/serendipity-db/db;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=9091;DB_CLOSE_DELAY=-1
 spring.datasource.username=admin
 spring.datasource.password=secret
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
