Updated the JPA properties

--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# spring.main.banner-mode=off
-# spring.jpa.open-in-view=false
+spring.main.banner-mode=off
+spring.jpa.open-in-view=false
 
 server.port=3001
 
@@ -9,7 +9,7 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.security=DEBUG
 
-# Spring Boot Resource Server
+# Spring Security OAuth2 Resource Server configuration
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:10001/auth/realms/development/protocol/openid-connect/certs
 
 # H2
@@ -19,6 +19,10 @@ spring.datasource.username=admin
 spring.datasource.password=secret
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# spring.datasource.username=flowable
+# spring.datasource.password=flowable
+# spring.jpa.hibernate.ddl-auto=update
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
