--- a/projects/spring-boot/server/flowable/wars/application.properties
+++ b/projects/spring-boot/server/flowable/wars/application.properties
@@ -1,7 +1,4 @@
 spring.main.banner-mode=off
-spring.jpa.open-in-view=false
-
-server.port=3001
 
 # Logging
 logging.level.root=INFO
@@ -9,19 +6,19 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.security=DEBUG
 
-# Spring Security OAuth2 Resource Server configuration
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:10001/auth/realms/development/protocol/openid-connect/certs
-
 # Spring JPA
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:~/serendipity-db/db;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=9091;DB_CLOSE_DELAY=-1
 spring.datasource.username=admin
 spring.datasource.password=secret
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+# DEFAULT ADMINISTRATOR ACCOUNTS
+flowable.idm.app.admin.user-id=admin
+flowable.idm.app.admin.password=secret
+flowable.idm.app.admin.first-name=
+flowable.idm.app.admin.last-name=Administrator
+flowable.idm.app.admin.email=admin@serendipity.org.au
+
+# IDM: https://github.com/flowable/flowable-engine/blob/master/modules/flowable-ui-idm/flowable-ui-idm-app/src/main/resources/flowable-default.properties
