Updated the Individual Representation Model

--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -12,6 +12,9 @@ logging.level.org.springframework.security=DEBUG
 # Spring Security OAuth2 Resource Server configuration
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:10001/auth/realms/development/protocol/openid-connect/certs
 
+# Spring Data REST
+spring.data.rest.base-path: /api
+
 # Spring JPA
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:~/serendipity-db/db;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=9091;DB_CLOSE_DELAY=-1
