--- a/projects/spring-boot/pom.xml
+++ b/projects/spring-boot/pom.xml
@@ -49,7 +49,25 @@
   </properties>
 
   <dependencies>
-  
+
+    <!-- Add REST API (HATEOAS) dependencies -->
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-hateoas</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-rest</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.atteo</groupId>
+      <artifactId>evo-inflector</artifactId>
+      <version>${evo.inflector.version}</version>
+    </dependency>
+
     <!-- Add JPA dependencies -->
 
     <dependency>
@@ -67,22 +85,16 @@
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>sqlite-jdbc</artifactId>
-    </dependency>  
+    </dependency>
     -->
-    
-    <!-- Add REST API (HATEOAS) dependencies -->
 
+    <!--
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-hateoas</artifactId>
+      <artifactId>spring-boot-devtools</artifactId>
     </dependency>
+    -->
 
-    <dependency>
-      <groupId>org.atteo</groupId>
-      <artifactId>evo-inflector</artifactId>
-      <version>${evo.inflector.version}</version>
-    </dependency>
-    
     <!-- Add OAuth 2.0 Resource Server dependencies -->
 
     <dependency>
