--- a/projects/spring-boot/server/pom.xml
+++ b/projects/spring-boot/server/pom.xml
@@ -31,6 +31,12 @@
         </exclusion>
       </exclusions>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.restdocs</groupId>
+      <artifactId>spring-restdocs-webtestclient</artifactId>
+      <scope>test</scope>
+    </dependency>
     
     <dependency>
       <groupId>org.springframework.security</groupId>
