Updated the docker-compose.yml

--- a/projects/spring-boot/server/flowable/wars/application.properties
+++ b/projects/spring-boot/server/flowable/wars/application.properties
@@ -5,6 +5,7 @@ logging.level.root=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.security=DEBUG
+# logging.level.org.flowable=DEBUG
 
 # Spring JPA
 spring.datasource.driver-class-name=org.h2.Driver
@@ -35,6 +36,7 @@ flowable.modeler.app.deployment-api-url=http://localhost:9999/flowable-task/app-
 # LDAP
 flowable.idm.ldap.enabled=true
 flowable.idm.ldap.server=ldap://localhost
+# flowable.idm.ldap.server=ldap://host.docker.internal
 flowable.idm.ldap.port=10389
 flowable.idm.ldap.user=cn=admin,dc=flowable,dc=org
 flowable.idm.ldap.password=secret
@@ -66,5 +68,3 @@ flowable.idm.ldap.cache.group-expiration=180000
 # Modeler: https://github.com/flowable/flowable-engine/blob/master/modules/flowable-ui-modeler/flowable-ui-modeler-app/src/main/resources/flowable-default.properties
 # Task: https://github.com/flowable/flowable-engine/blob/master/modules/flowable-ui-task/flowable-ui-task-app/src/main/resources/flowable-default.properties
 # Admin: https://github.com/flowable/flowable-engine/blob/master/modules/flowable-ui-admin/flowable-ui-admin-app/src/main/resources/flowable-default.properties
-
-# flowable.idm.ldap.server=ldap://host.docker.internal
