--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -8,6 +8,7 @@ logging.level.root=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.security=DEBUG
+# logging.level.org.flowable=DEBUG
 
 # Spring Security OAuth2 Resource Server
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:10001/auth/realms/development/protocol/openid-connect/certs
