--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.main.banner-mode=off
 spring.jpa.open-in-view=false
 
-server.port=3001
+# server.port=3001
 
 # Logging
 logging.level.root=INFO
