Updated the Developer Docs

--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.main.banner-mode=off
 spring.jpa.open-in-view=false
 
-# server.port=3001
+server.port=3001
 
 # Logging
 logging.level.root=INFO
@@ -18,8 +18,8 @@ spring.data.rest.base-path: /api
 
 # Spring JPA
 spring.datasource.driver-class-name=org.h2.Driver
+# Used by mvn spring-boot:run
 spring.datasource.url=jdbc:h2:~/serendipity-db/db;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=9091;DB_CLOSE_DELAY=-1
-# spring.datasource.url=jdbc:h2:/serendipity-db/db;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=9091;DB_CLOSE_DELAY=-1
 spring.datasource.username=admin
 spring.datasource.password=secret
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
