--- a/projects/spring-boot/server/docker-compose.yml
+++ b/projects/spring-boot/server/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.7'
 
 services:
+
   openldap:
     container_name: openldap
     build:
@@ -24,6 +25,12 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    env_file: ./serendipity-api.env
     ports:
       - "3001:3001"
+    volumes:
+      - ./h2:/h2
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:h2:/h2/serendipity
+      AUTO_SERVER: 1
+      AUTO_SERVER_PORT: 9091
+      DB_CLOSE_DELAY: -1
