Updated the docker-compose.yml

--- a/projects/spring-boot/server/services/keycloak/Dockerfile
+++ b/projects/spring-boot/server/services/keycloak/Dockerfile
@@ -6,7 +6,9 @@ USER root
 
 RUN microdnf install -y unzip
 
-COPY ./serendipity-keycloak-theme-$THEME_VERSION.zip /opt/jboss/keycloak/themes/
-RUN cd /opt/jboss/keycloak/themes/ && \
+COPY json /tmp
+
+COPY ./serendipity-keycloak-theme-$THEME_VERSION.zip /opt/jboss/keycloak/themes
+RUN cd /opt/jboss/keycloak/themes && \
     unzip serendipity-keycloak-theme-$THEME_VERSION.zip && \
     rm serendipity-keycloak-theme-$THEME_VERSION.zip
