--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.data.rest.base-path: /api
 # Spring JPA
 spring.datasource.driver-class-name=org.h2.Driver
 # Used by mvn spring-boot:run
-spring.datasource.url=jdbc:h2:~/serendipity-db/db;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=9091;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:~/h2/serendipity;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=9091;DB_CLOSE_DELAY=-1
 spring.datasource.username=admin
 spring.datasource.password=secret
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
