--- a/projects/spring-boot/server/services/keycloak/keycloak.env
+++ b/projects/spring-boot/server/services/keycloak/keycloak.env
@@ -1,3 +1,5 @@
 KEYCLOAK_USER=admin
 KEYCLOAK_PASSWORD=secret
 KEYCLOAK_DEFAULT_THEME=serendipity
+KEYCLOAK_IMPORT=/tmp/development-realm.json
+KEYCLOAK_MIGRATION_STRATEGY=OVERWRITE_EXISTING
