Updated the Developer Docs

--- a/projects/spring-boot/server/docker-compose.yml
+++ b/projects/spring-boot/server/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     ports:
       - "10001:8080"
     volumes:
-      - .:/tmp
+      - .:/export
     env_file: ./services/keycloak/keycloak.env
 
   serendipity-api:
