Updated the Developer Docs

--- a/projects/spring-boot/server/serendipity-api.env
+++ b/projects/spring-boot/server/serendipity-api.env
@@ -9,7 +9,7 @@ LOGGING_LEVEL_ORG_HIBERNATE_SQL=DEBUG
 LOGGING_LEVEL_ORG_HIBERNATE_TYPE_DESCRIPTOR_SQL_BASIC_BINDER=TRACE
 LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY=DEBUG
 
-SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI=http://localhost:10001/auth/realms/development/protocol/openid-connect/certs
+SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI=http://keycloak:8080/auth/realms/development/protocol/openid-connect/certs
 
 SPRING_DATA_REST_BASE_PATH=/api
 
