--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -12,6 +12,7 @@ logging.level.org.springframework.security=DEBUG
 
 # Spring Security OAuth2 Resource Server
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:10001/auth/realms/development/protocol/openid-connect/certs
+# spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost/
 
 # Spring Data REST
 spring.data.rest.base-path: /api
