--- a/projects/spring-boot/pom.xml
+++ b/projects/spring-boot/pom.xml
@@ -9,8 +9,11 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
+  <!-- Spring HATEOAS - Combined with Spring Data REST                                     -->
+  <!-- See: https://github.com/spring-projects/spring-hateoas-examples/blob/master/pom.xml -->
+
   <name>Serendipity REST API</name>
-  <description>Use Spring HATEOAS to build Serendipity's REST API</description>
+  <description>Use Spring HATEOAS and Spring Data REST to build Serendipity's REST API</description>
 
   <inceptionYear>2020</inceptionYear>
 
@@ -31,7 +34,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.3.RELEASE</version>
+    <version>2.2.6.RELEASE</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
 
@@ -45,10 +48,36 @@
     <java.version>11</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <spring.security.oauth2.autoconfigure.version>2.2.3.RELEASE</spring.security.oauth2.autoconfigure.version> 
   </properties>
 
   <dependencies>
+
+    <!-- Add Spring Security 5 dependencies -->
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-oauth2-resource-server</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-oauth2-jose</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+    </dependency>
 
     <!-- Add REST API (HATEOAS) dependencies -->
 
@@ -58,14 +87,14 @@
     </dependency>
 
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-rest</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>org.atteo</groupId>
       <artifactId>evo-inflector</artifactId>
       <version>${evo.inflector.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-rest</artifactId>
     </dependency>
 
     <!-- Add JPA dependencies -->
@@ -88,32 +117,6 @@
     </dependency>
     -->
 
-    <!--
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-devtools</artifactId>
-    </dependency>
-    -->
-
-    <!-- Add OAuth 2.0 Resource Server dependencies -->
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
-    </dependency>
-    
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-security</artifactId>
-    </dependency>
-
-    <!-- Add Web application dependencies -->
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-
     <!-- Add Flowable dependencies -->
 
     <dependency>
@@ -134,15 +137,14 @@
       <version>${flowable.version}</version>
     </dependency>
 
+    <!-- Misc -->
+
     <!--
     <dependency>
-      <groupId>org.flowable</groupId>
-      <artifactId>flowable-spring-boot-starter-actuator</artifactId>
-      <version>${flowable.version}</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
     </dependency>
     -->
-
-    <!-- Add LOMBOK dependencies -->
 
     <dependency>
       <groupId>org.projectlombok</groupId>
