Created the Individual Model Assembler

--- a/projects/spring-boot/server/services/keycloak/Dockerfile
+++ b/projects/spring-boot/server/services/keycloak/Dockerfile
@@ -8,6 +8,8 @@ RUN microdnf install -y unzip
 
 COPY json /tmp
 
+# COPY ./standalone-ha.xml /opt/jboss/keycloak/standalone/configuration/standalone-ha.xml
+
 COPY ./serendipity-keycloak-theme-$THEME_VERSION.zip /opt/jboss/keycloak/themes
 RUN cd /opt/jboss/keycloak/themes && \
     unzip serendipity-keycloak-theme-$THEME_VERSION.zip && \
