--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -5,14 +5,17 @@ server.port=3001
 
 # Logging
 logging.level.root=INFO
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.org.springframework.security=DEBUG
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# logging.level.org.springframework.security=DEBUG
 # logging.level.org.flowable=DEBUG
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+logging.level.org.springframework.security=WARN
+logging.level.org.flowable=WARN
 
 # Spring Security OAuth2 Resource Server
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:10001/auth/realms/development/protocol/openid-connect/certs
-# spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost/
 
 # Spring Data REST
 spring.data.rest.base-path: /api
